k8s/etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.4.13
        command:
        - /usr/local/bin/etcd
        args:
        - -advertise-client-urls=http://etcd:2379
        - -listen-client-urls=http://0.0.0.0:2379
        ports:
        - containerPort: 2379
