k8s/rigelui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rigelui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rigelui
  template:
    metadata:
      labels:
        app: rigelui
    spec:
      containers:
      - name: rigelui
        image: docker.io/ssd532/rigelui:latest
        ports:
        - containerPort: 80
