k8s/rigelui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rigelui
spec:
  selector:
    app: rigelui
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: NodePort
