k8s/rigelwsc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rigelwsc
spec:
  selector:
    app: rigelwsc
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
