k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: rigelwsc
            port:
              number: 8090
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rigelui
            port:
              number: 80
